--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -96,7 +96,7 @@
 # [+]2024-11-21 81、替换IOS更新屏蔽的URL链接，有需要的可自行安装屏蔽IOS更新
 # [+]2024-12-04 82、将blackmatrix7的知乎去广告脚本换成墨鱼自用的Zhihu.Adblock.js脚本
 # [-]2025-01-04 83、移除海外抖音分流，与今日头条域名冲突，有需要者可自行添加使用，另添加github本地代理分流
-# [+]2025-04-05 84、更换去开屏广告地址，旧的去开屏rewrite将不久后删除
+# [+]2025-04-05 84、更换去开屏广告地址，旧的去开屏rewrite已删除
 
 
 
