--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -265,6 +265,7 @@ https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.Chin
 host, ad.12306.cn, direct
 host, sdkapp.uve.weibo.com, direct
 host-keyword, github, proxy
+IP-CIDR,95.161.76.0/20, proxy
 
 # > local
 ip-cidr, 10.0.0.0/8, direct
@@ -294,4 +295,3 @@ force_sni_domain_name = false
 hostname = -*.fcbox.com, -*huami.com, -*amemv.com, -*snssdk.com, -www.google.com
 
 # 🟢 墨鱼提醒passphrase和p12代为证书&主机名部分, 更新配置前可把旧的配置中passphrase和p12代码拷贝下来, 导入新的配置文件把内容粘贴在对应位置就不用重装证书
-
